apply domain object each login on going